--- a/AntiOverSpeed/res/values/strings.xml
+++ b/AntiOverSpeed/res/values/strings.xml
@@ -5,4 +5,5 @@
 	<string name="title">设备信息</string>
 	<string name="add_favorite">收藏当前位置</string>
 	<string name="query_positions">查询存储位置</string>
+	<string name="start_time">选择时间</string>
 </resources>
