--- a/AntiOverSpeed/res/values/strings.xml
+++ b/AntiOverSpeed/res/values/strings.xml
@@ -4,6 +4,7 @@
     
 	<string name="title">设备信息</string>
 	<string name="add_favorite">收藏当前位置</string>
+	<string name="app_info">详细信息</string>
 	<string name="query_positions">查询存储位置</string>
 	<string name="start_time">选择时间</string>
 	<string name="speed_title">速度:</string>
