--- a/SpeedRecorder/res/values/strings.xml
+++ b/SpeedRecorder/res/values/strings.xml
@@ -5,7 +5,7 @@
 	<string name="title">设备信息</string>
 	<string name="add_favorite">收藏当前位置</string>
 	<string name="app_info">详细信息</string>
-	<string name="query_speeds">查询最新速度记录</string>
+	<string name="query_speeds">查询最近一天速度记录</string>
 	<string name="location_change_error">再次获取GPS信息超时，重置速度%1$.2f</string>
 	<string name="start_time">选择时间</string>
 	<string name="speed_title">速度:</string>
