--- a/SpeedRecorder/res/values/strings.xml
+++ b/SpeedRecorder/res/values/strings.xml
@@ -18,6 +18,7 @@
 	<string name="time_title">时间：</string>
 	<string name="export_db">导出数据库文件</string>
 	<string name="export_db_ok">导出数据库文件成功</string>
+	<string name="exit">完全退出</string>
 	<string name="header_time">时间</string>
 	<string name="header_speed">速度</string>
 	<string name="select_date">选择日期:</string>
@@ -25,4 +26,6 @@
 	<string name="select_end_time">结束时间:</string>
 	<string name="query">查询</string>
 	<string name="select_time_error">开始时间晚于结束时间，请重新选择时间</string>
+	<string name="notification_title">速度记录者</string>
+	<string name="notification_content">努力记录速度中...</string>
 </resources>
